--- a/.env-example
+++ b/.env-example
@@ -9,4 +9,11 @@ MIN_DELAY=
 BIG_SLEEP_TIME=
 TASK_SLEEP_TIME=
 
+AUTO_CLAIM_REFERRAL=
+AUTO_CLAIM_DAILY_BONUS=
+AUTO_CLAIM_REFERRAL_BONUS=
+AUTO_CLAIM_WELCOME_BONUS=
+AUTO_FINISH_TASK=
+AUTO_PLACE_ORDER=
+
 USE_PROXY_FROM_FILE=
