Added night sleep feature

--- a/.env-example
+++ b/.env-example
@@ -15,5 +15,7 @@ AUTO_CLAIM_REFERRAL_BONUS=
 AUTO_CLAIM_WELCOME_BONUS=
 AUTO_FINISH_TASK=
 AUTO_PLACE_ORDER=
+NIGHT_SLEEP =
+NIGHT_SLEEP_TIME =
 
 USE_PROXY_FROM_FILE=
